--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.4.2",
     "axios": "^0.19.2",
+    "chart.js": "^2.9.3",
     "moment": "^2.27.0",
     "react": "^16.13.1",
+    "react-chartjs-2": "^2.9.0",
     "react-dom": "^16.13.1",
     "react-pdf": "^4.1.0",
     "react-router-dom": "^5.2.0",
